# FIIT_PPGSO_Projekt

./: CMakeLists.txt  bottle.h  camera.h  club.h  confetti.h  gamewindow.h  libraries.h  lightning.h  loader.h  main.cpp  material.h  mesh.h  model.h  player.h  primitives.h  scene_1.h  scene_2.h  shader.h  texture.h  vertex.h
cmake/: add_resources.cmake
ppgso/: mesh.cpp
